# upm209-esp-extension

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  roadmap.txt  sdkconfig.defaults
components/devices/: CMakeLists.txt  README.md  target_registers.h  todo.md
components/devices/ump209/: ump209.c  ump209.h  ump209_full_registers.inc
components/devices/upm209/: upm209.c  upm209.h  upm209_full_registers.inc
components/lte/: CMakeLists.txt  README.md  lte.c  lte.h
components/modbus/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  modbus_crc.c  modbus_crc.h  modbus_io.c  modbus_io.h  modbus_manager.c  modbus_manager.h  modbus_master.c  modbus_master.h  todo.md
components/network/: CMakeLists.txt  Kconfig  README.md  internet.c  internet.h  internet_send.c  todo.md
components/processing/: CMakeLists.txt  README.md  outlier_handling.c  outlier_handling.h  todo.md
components/services/: CMakeLists.txt  Kconfig  README.md  processing_service.c  processing_service.h  sampling_service.c  sampling_service.h  services_manager.c  services_manager.h  time_service.c  time_service.h  todo.md
components/storage/: CMakeLists.txt  Kconfig  README.md  memory.c  memory.h  memory_manager.c  memory_manager.h  todo.md
components/utils/: CMakeLists.txt  README.md  logging.c  logging.h
components/wifi/: CMakeLists.txt  README.md  wifi.c  wifi.h
docs/: JSON_schema_UPM209.json
main/: CMakeLists.txt  main.c
main/config/: todo.md
reports/: ump209_register_discovery_report.md  ump209_regset_validation_test_report.md
